scripts/namespace-role-rolebinding.yaml
# Create a namespace named "web"
apiVersion: v1
kind: Namespace
metadata:
  name: web
